{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "characterControls",
            "id": "ec2e654c-175c-4cf6-b1c6-0fef4e046f73",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "3040e4e7-a49c-4ca8-b79f-3c6a3128a38a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "View",
                    "type": "PassThrough",
                    "id": "cd4b41ce-7894-4b3c-9d29-cb88ab274ffa",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "034a325c-e0c0-4e98-9538-c4d175652ca9",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87117545-9967-4224-a3df-46a2d7e5f4f6",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "View",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}